--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -67,6 +68,9 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  --correct: theme("colors.lime.400");
+  --incorrect: theme("colors.red.500");
 }
 
 /*
@@ -74,6 +78,9 @@
 */
 
 @theme inline {
+  --color-correct: var(--correct);
+  --color-incorrect: var(--incorrect);
+
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
