style: add brand color variables

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,12 @@
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
 
+  --brand-1-lite: theme("colors.cyan.600");
+  --brand-2-lite: theme("colors.blue.600");
+  --brand-1: theme("colors.cyan.500");
+  --brand-2: theme("colors.blue.500");
+  --brand-1-darker: theme("colors.cyan.300");
+
   --correct: theme("colors.lime.400");
   --incorrect: theme("colors.red.500");
 }
@@ -65,6 +71,12 @@
 */
 
 @theme inline {
+  --color-brand-1-lite: var(--brand-1-lite);
+  --color-brand-2-lite: var(--brand-2-lite);
+  --color-brand-1: var(--brand-1);
+  --color-brand-2: var(--brand-2);
+  --color-brand-1-darker: var(--brand-1-darker);
+
   --color-correct: var(--correct);
   --color-incorrect: var(--incorrect);
 
