--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,10 @@
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
+  --input: theme("colors.neutral.700");
   --ring: oklch(0.708 0 0);
+
+  --hover: theme("colors.neutral.600");
 
   --brand-1-lite: theme("colors.cyan.600");
   --brand-2-lite: theme("colors.blue.600");
@@ -79,6 +81,8 @@
 
   --color-correct: var(--correct);
   --color-incorrect: var(--incorrect);
+
+  --color-hover: var(--hover);
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
