style: add settings color variables

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,10 @@
   --input: theme("colors.neutral.700");
   --ring: oklch(0.708 0 0);
 
+  --settings-1: theme("colors.neutral.600");
+  --settings-2: theme("colors.neutral.400");
+  --settings-3: theme("colors.neutral.300");
+
   --hover: theme("colors.neutral.600");
 
   --brand-1-lite: theme("colors.cyan.600");
@@ -83,6 +87,9 @@
   --color-incorrect: var(--incorrect);
 
   --color-hover: var(--hover);
+  --color-settings-1: var(--settings-1);
+  --color-settings-2: var(--settings-2);
+  --color-settings-3: var(--settings-3);
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
