--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
-  --input: theme("colors.neutral.700");
+  --input: theme("colors.neutral.200");
   --ring: oklch(0.708 0 0);
   --badge-icon: theme("colors.neutral.400");
   --badge-icon-hover: theme("colors.neutral.500");
@@ -170,7 +170,7 @@
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
+  --input: theme("colors.neutral.600"); /* oklch(1 0 0 / 15%); */
   --ring: oklch(0.556 0 0);
   --textarea-bg: theme("colors.neutral.800");
   --dropdown-bg: theme("colors.neutral.600");
