--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
   -moz-osx-font-smoothing: grayscale;
 
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --background: theme("colors.neutral.100");
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
