--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,8 @@
 
   --correct: theme("colors.lime.500");
   --incorrect: theme("colors.red.600");
+
+  --toast-foreground: theme("colors.neutral.50");
 }
 
 /*
@@ -159,6 +161,7 @@
   --badge-icon-hover: theme("colors.neutral.200");
   --correct: theme("colors.lime.400");
   --incorrect: theme("colors.red.500");
+  --toast-foreground: theme("colors.neutral.800");
 }
 
 /*
